styles/pages/_Results.scss
@use '../variables' as Colors;

$TOPNAV_HEIGHT: 60px;
$SIDEBAR_WIDTH: 268px;

.Results_Header {
  width: 100%;
  height: $TOPNAV_HEIGHT;
  left: 0;
  top: 0;
  z-index: 9999;
  background: Colors.$White;
  flex-direction: row;
  display: flex;
  align-items: center;
  justify-content: left;
  position: fixed;
  box-shadow: 0 0 10px Colors.$Light_Grey;
  border-bottom: 1px solid Colors.$Light_Grey;

  &-top {
    box-shadow: none;
    border-bottom: 1px solid Colors.$Light_Grey;
  }

  @media only screen and (max-width: 767px) {
    height: 120px;
    background: Colors.$White;
    align-items: unset;
    justify-content: left;
    position: inherit;
    flex-direction: column;
  }
}

.Results__mobileSearchFilterWrapper {
  @media only screen and (max-width: 767px) {
    display: flex;
    justify-content: space-between;
    width: 100vw;
    padding-left: 15px;
    padding-right: 15px;
    padding-top: 10px;
    padding-bottom: 12px;
    gap: 1rem;
    align-items: center;
  }

  & > .Results__filterButton {
    overflow: visible;
  }
}

.Results__spacer {
  min-width: 10px;
  flex-basis: 100px;
  flex-shrink: 3;

  @media only screen and (max-width: 767px) {
    flex-basis: 10px;
  }
}

.Results__Logo {
  height: 40px;
  z-index: 10;
  cursor: pointer;
  margin-left: 17px;
  margin-right: 2px;

  &--wrapper {
    line-height: 0;
  }

  @media only screen and (max-width: 767px) {
    display: none;
  }
}

.Results__searchwrapper {
  flex-basis: 538px;
  flex-shrink: 2;

  display: flex;

  @media only screen and (max-width: 767px) {
    margin-right: 18px;
  }
}

.Results_Container {
  padding-top: $TOPNAV_HEIGHT;
  display: flex;

  @media only screen and (max-width: 767px) {
    padding-top: 0;
  }
}

.Results_SidebarWrapper {
  position: fixed;
  width: $SIDEBAR_WIDTH;
  top: $TOPNAV_HEIGHT;
  bottom: 0;
  overflow-y: scroll;
  scrollbar-width: none;
  z-index: 21;

  &::-webkit-scrollbar {
    display: none;
  }

  background-color: Colors.$Off_White;
  padding: 25px 15px 25px 15px;
}

.Results_SidebarSpacer {
  flex-basis: $SIDEBAR_WIDTH;
  flex-shrink: 0;
}

.Results_MainWrapper {
  display: flex;
  justify-content: center;
  width: 100%;
}

.Results_Main {
  padding-top: 10px;
  padding-right: 40px;
  padding-left: 40px;
  flex-grow: 1;
  max-width: 1800px;

  @media only screen and (max-width: 1000px) {
    padding-right: 10px;
    padding-left: 10px;
  }
}

// TODO make this a spiner, but need to fix ResultsLoader rerender issue first
.Results_Loading {
  height: 0;
}

.Results_EmptyContainer {
  font-size: 19px;
  padding-top: 150px;
  text-align: center;
  padding-bottom: 100px;
}

.Results_EmptyBottomLine {
  padding-top: 7px;
}

.Results_EmptyText {
  display: inline-block !important;
  padding: 5px !important;
  padding-left: 9px !important;
  padding-right: 9px !important;
  font-size: inherit !important;
}

.Breadcrumb_Container {
  display: flex;
  flex-direction: row;
  height: 40px;
  margin-left: 16px;

  &__dropDownContainer {
    border-radius: 5px 0 0 5px;
    height: 100%;
    display: flex;
    align-items: center;
    min-width: fit-content;
  }

  &__slash {
    font-size: 24px;
    font-weight: initial;
    color: Colors.$Light_Grey;
    margin: auto 4px;
  }

  ::-webkit-scrollbar-thumb {
    background-color: Colors.$Grey;
  }

  ::-webkit-scrollbar-track {
    background-color: Colors.$Light_Grey;
  }
}

.Notifications_Settings {
  display: flex;
  justify-content: flex-end;
  float: right;
}

.user-menu {
  display: flex;
  flex: 1;
  text-align: right;
  margin: 0 17px 0 30px;
  position: relative;
  justify-content: flex-end;

  &__icon-wrapper {
    display: flex;
  }

  &__icon {
    cursor: pointer;
  }

  &__dropdown {
    z-index: 999999;
    position: absolute;
    background: Colors.$White;
    border-radius: 3px;
    padding: 12px;
    bottom: 0;
    right: -20px;
    transform: translateY(calc(100% + 4px));
    filter: drop-shadow(0px 0px 3px Colors.$Grey);
    white-space: nowrap;

    &::before {
      content: '';
      position: absolute;
      top: -4px;
      right: 30px;
      width: 0;
      height: 0;
      border-left: 4px solid transparent;
      border-right: 4px solid transparent;
      border-bottom: 4px solid Colors.$White;

      @media only screen and (max-width: 767px) {
        right: 10px;
      }
    }

    @media only screen and (max-width: 767px) {
      right: 0;
    }
  }

  &__item {
    padding: 4px 6px;
    border-radius: 5px;
    cursor: pointer;

    &:hover {
      background: Colors.$Light_Grey;
    }
  }

  @media only screen and (max-width: 767px) {
    margin: 0;
  }
}

.User_SignOut {
  margin: 0px 10px;
}

